Fixing Breadcrumb Spacing

--- a/wp-content/themes/wp-shield/src/assets/scss/shield-wp-overrides/wp_overrides.scss
+++ b/wp-content/themes/wp-shield/src/assets/scss/shield-wp-overrides/wp_overrides.scss
@@ -135,4 +135,7 @@ input.facetwp-autocomplete-update{
 	font-weight: 600;
 }
 
+.breadcrumbs{
+    padding-left: 0px;
+}
 /** END OVER RIDES TO DSP SPECIFICALLY FOR WP. **/
